# rocola

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md
app/: README.md  pyproject.toml
app/assets/fonts/: README.md
app/assets/themes/default/: theme.toml
app/rocola/: __init__.py  __main__.py  app.py  audio.py  bt.py  config.py  input.py  mpdclient.py  sysinfo.py  theme.py  ui.py
display/: rocola-display-setup
display/modelines/: 15khz.conf  README.md
docs/: 01-overview.md  02-build-pipeline.md  03-boot-and-live.md  04-installer.md  05-display-crt-15khz.md  06-arcade-controls.md  07-rocola-app.md  08-music-management.md  09-branding-theming.md  10-flashing-usb.md  11-troubleshooting.md  12-verificacion.md  13-rufus-windows.md  14-audio.md
image/: Dockerfile.builder  build-image.sh  genimage.cfg  package-release.sh
installer/: rocola-install
os/: Dockerfile  packages.list
os/rootfs-overlay/etc/: mpd.conf
os/rootfs-overlay/etc/X11/: Xwrapper.config
os/rootfs-overlay/etc/bluetooth/: main.conf
os/rootfs-overlay/etc/dbus-1/system.d/: rocola-bluetooth.conf
os/rootfs-overlay/etc/polkit-1/rules.d/: 49-rocola-power.rules
os/rootfs-overlay/etc/rocola/: audio.conf  display.conf
os/rootfs-overlay/etc/ssh/sshd_config.d/: 10-rocola.conf
os/rootfs-overlay/etc/systemd/network/: 80-rocola-dhcp.network
os/rootfs-overlay/etc/systemd/system/: rocola-display-setup.service  rocola-hostname.service  rocola-music-import.service  rocola-ssh.service  (+2 more)
os/rootfs-overlay/home/rocola/: .bash_profile
os/rootfs-overlay/root/.ssh/: authorized_keys
(+2 files in other folders)
